# multi-hop-qa-system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  graduation-project-proposal.md  pyproject.toml
api/: dependencies.py  main.py
api/routers/: health.py  qa.py
api/schemas/: __init__.py  request.py  response.py
config/: config.toml  config.yaml  domain_schema.json
docs/: API_REFERENCE.md  DATA_FLOW.md  PROJECT_STRUCTURE.md
scripts/: generate_demo_doc.py  generate_test_docs.py  run_demo.py  setup_autodl.sh  start_neo4j.sh  stop_neo4j.sh  test_extraction.py
src/common/: config.py  exceptions.py  logger.py  neo4j_docker.py
src/data_processing/: __init__.py  document_loader.py  entity_extractor.py  entity_merger.py  quality_verifier.py  relation_types.py  schema_inducer.py  teacher_annotator.py  triple_extractor.py
src/inference/: __init__.py  inference_engine.py  model_loader.py
src/knowledge_graph/: __init__.py  cypher_builder.py  graph_builder.py  graph_retriever.py  neo4j_client.py  schema.py
src/llm/: __init__.py  base_client.py  client_factory.py  local_client.py  openai_client.py  zhipu_client.py
src/qa_engine/: __init__.py  answer_generator.py  context_assembler.py  query_rewriter.py  question_parser.py
src/reasoning/: __init__.py  evidence_chain.py  reasoning_orchestrator.py
src/training/: __init__.py  checkpoint_manager.py  dapt_trainer.py  data_collator.py  data_formatter.py  lora_trainer.py
test_documents/: test_qa_pairs.json
tests/unit/: test_api.py  test_common.py  test_data_processing.py  test_knowledge_graph.py  (+4 more)
